--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -28,12 +28,9 @@ jobs:
     - name: Build Binaries
       run: make build
 
-    - name: Compose
-      run: docker-compose up -d
-      
-    - name: Curl
-      run: curl --fail http://localhost:8080/apis    
-      
+    - name: run
+      run: make run-docker
+          
 
     - name: Accept
       run: sleep 10 && make accept
